--- a/Codebase/Requirements.txt
+++ b/Codebase/Requirements.txt
@@ -12,7 +12,7 @@ requests>=2.22.0
 spacy>=2.2.1
 gensim>=4.0.1
 pdf2image>=1.16.0
-pytesseract>=0.3.9
+easyocr>=1.6.2
 Pillow>=9.2.0
 asyncio>=3.4.3
 pyppeteer>=1.0.2
